--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,12 +102,14 @@ nav img{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 30px;
 }
 
 .songBox{
     display: flex;
     justify-content: center;
     gap:18vw;
+    margin-top: 7vh;
 }
 
 .songBar img{
@@ -120,6 +122,8 @@ nav img{
 }
 
 
-
+#next , #prev{
+    cursor: pointer;
+}
 
 
